--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jdavidson974.github.io/Jdavidson974.github.io-react-moovies-prod",
+  "homepage": "https://jdavidson974.github.io/Jdavidson974.github.io-react-moovies-prod",
   "name": "movieapp",
   "version": "0.1.0",
   "private": true,
