--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://jdavidson974.github.io/Jdavidson974.github.io-react-moovies-prod",
-  "name": "movieapp",
+  "name": "react-moovies-prod",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
