--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jdavidson974.github.io/Jdavidson974.github.io-react-moovies-prod",
+  "homepage": "https://https://react-project.sautronjeandavidson.re/",
   "name": "react-moovies-prod",
   "version": "0.1.0",
   "private": true,
